re PR target/27266 (syncronization primitives cause ICE with -march=pentium or better)

gcc/
	PR target/27266
	* config/i386/i386.c (ix86_expand_branch): Jump to simple if
	ix86_compare_emitted is non-NULL.

gcc/testsuite/
	PR target/27266
	* gcc.target/i386/pr27266.c: New.

From-SVN: r113987